--- a/index.html
+++ b/index.html
@@ -1,11 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>File HTML index</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Index</title>
 </head>
 <body>
-  
+    <h1>Media Online</h1>
+    <h2>Sosial media developer</h2>
+    <P>Belajar dan berbagi agar hidup menjadi lebih baik</P>
+    <h3>Benefit join di media online</h3>
+    <ul>
+        <li>mendapatkan motivasi dari sesama para Developer </li>
+        <li>sharing knowlenge</li>
+        <li>dibuat oleh calon web Developer terbaik</li>
+    </ul>
+    <h3>cara bergabung ke media online</h3>
+    <ol>
+        <li>mengunjungi website ini</li>
+        <li>mendaftarkan di <a href="buat-akun.html">from sign up</a>
+        <li>selesai</li>
+    </ol>
+
 </body>
 </html>
